--- a/src/app/core/components/modals/generic-modal-header/generic-modal-header.component.scss
+++ b/src/app/core/components/modals/generic-modal-header/generic-modal-header.component.scss
@@ -15,5 +15,9 @@
     font-weight: 100;
     position: relative;
     top: -1rem;
+
+    &:focus {
+      outline-color: white;
+    }
   }
 }
