--- a/src/styles.scss
+++ b/src/styles.scss
@@ -106,6 +106,11 @@ body {
   color: $app-color-gray-dark;
 }
 
+.required-label::after {
+  content: ' *';
+  color: red;
+}
+
 button,
 [type='button'],
 [type='reset'],
